# SimpleQtApp

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
